<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/imageView25"
            android:src="@drawable/pizza_sicilia" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_sicilia360" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/imageView26"
            android:src="@drawable/pizza_firm" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_firm350" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView28"
            android:src="@drawable/pizza_al_pro" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_al_pro300" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView29"
            android:src="@drawable/pizza_pro_fung" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_pro_fung300" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView30"
            android:src="@drawable/pizza_stravag" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_stravag300" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView31"
            android:src="@drawable/pizza_karleone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_karleone300" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView32"
            android:src="@drawable/pizza_vegetar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_vegetar300" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView33"
            android:src="@drawable/pizza_chesare" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_chesare310" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView34"
            android:src="@drawable/pizza_estate" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_estate340" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView35"
            android:src="@drawable/pizza_konsalame" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_konsalame340" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView36"
            android:src="@drawable/pizza_primavera" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_primavera350" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView37"
            android:src="@drawable/pizza_pepperoni" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_pepperoni380" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="169dp"

            android:id="@+id/imageView38"
            android:src="@drawable/pizza_pikanto" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/add_to_order"
            android:onClick="onClickPizza"
            android:id="@+id/pizza_pikanto400" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/go_to_zakaz"
            android:onClick="zakaz"
            android:id="@+id/zakaz_button" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/back"
            android:onClick="back"
            android:id="@+id/back_button" />

    </LinearLayout>

</ScrollView>